# riscv-decoder

./: Cargo.toml  build.rs
instruction-creator/: Cargo.toml
instruction-creator/src/: lib.rs
src/: decoded_inst.rs  decoder.rs  error.rs  errors.rs  instructions.rs  lib.rs
