[package]
name = "riscv-decoder"
version = "0.1.3"
edition = "2021"

[build-dependencies]
phf_codegen = "0.11.2"

[dependencies]
phf = { version = "0.11.2", default-features = false }
anyhow = "1.0.89"
bit_ops = "0.1.13"
bitfield = "0.17.0"
thiserror = "1.0.64"

[dependencies.instruction-creator]
path = "instruction-creator"
