[package]
name = "riscv-decoder"
version = "0.2.0"
edition = "2021"

[build-dependencies]
phf_codegen = "0.11.3"

[dependencies]
phf = { version = "0.11.3", default-features = false }
anyhow = "1.0.95"
bit_ops = "0.1.15"
bitfield = "0.19.0"
thiserror = "2.0.11"
paste = "1.0.15"
cached = "0.55.1"

[dependencies.instruction-creator]
path = "instruction-creator"
